<resources>
    <string name="app_name">BlueTherm</string>
    <string name="action_settings">Settings</string>
    <string name="current_temperature">Current temperature</string>
    <string name="desired_temperature">Target temperature</string>
    <string name="disconnect">Disconnect</string>
    <string name="forget_device">Forget device</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device">Device:</string>
    <string name="connection_status">Status:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="unknown">Unknown</string>
    <string name="change_desired_temperature">Change desired temperature</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_alarm_sound">Set alarm sound</string>
    <string name="temperature_reached">Temperature reached</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm">Alarm</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="degrees_celsius">%.1f°C</string>
    <string name="exit">Exit</string>
    <string name="no_bluetooth_message">This app only works on devices with Bluetooth</string>
    <string name="no_bluetooth_title">No Bluetooth available</string>
    <string name="select_sound_title">Select ringtone for alarms:</string>
    <string name="notification_current_temperature">%1$s°C</string>
    <string name="notification_connected_to">Connected to %1$s</string>
    <string name="notification_alarm_set_for">Alarm set for %1$s°C</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="connection_established">Connection established</string>
    <string name="could_not_connect">Could not connect to device</string>
    <string name="connecting_to">Connecting to %1$s</string>
    <string name="please_wait">Please wait</string>
    <string name="no_devices_found">No devices found</string>
    <string name="found_one_device">Found 1 device</string>
    <string name="found_x_devices">Found %1$s devices</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="permissions_error_message">We need permission to use location in order to search for devices.\nPlease open the Permissions section in the app settings and toggle the Location permission switch.</string>
    <string name="open_app_settings">Open app settings</string>
    <string name="missing_permissions">Missing permissions</string>
    <string name="set_alarm">Set alarm</string>
    <string name="set">Set</string>
    <string name="target_temperature">Target temperature</string>
    <string name="decreasing">Decreasing</string>
    <string name="active_alarm_text">%1$s°C</string>
    <string name="increasing">Increasing</string>
    <string name="temperature_error">Please enter temperature</string>
    <string name="no_temperature">-.-°C</string>

</resources>
