<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:id="@+id/general_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/device"
                android:textAppearance="@style/GeneralFont"/>

            <TextView
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device"
                android:layout_weight="1"
                android:textAppearance="@style/GeneralFont"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connection_status"
                android:textAppearance="@style/GeneralFont"/>

            <TextView
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connection_status"
                android:layout_weight="1"
                android:textAppearance="@style/GeneralFont"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="-10dp"
            android:text="@string/current_temperature"/>

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_temperature"
            android:textSize="56sp"
            android:text="@string/no_temperature"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/alarm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_button_deactivated"
                android:drawablePadding="-48dp"
                android:text="@string/set_alarm"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>